# vsr

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/examples/: client.rs  server.rs  simple.rs
core/src/: bus.rs  checksum.rs  client.rs  io.rs  lib.rs  message.rs  replica.rs  storage.rs
docs/: vsr.md
examples/: bus.rs  client.rs  server.rs  simple.rs
simulation/: Cargo.toml
simulation/src/: cluster.rs  env.rs  io.rs  main.rs
src/: bus.rs  client.rs  clock.rs  io.rs  lib.rs  message.rs  network.rs  replica.rs
