[package]
name = "vsr"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
bytes = "1.10.1"
mio = { version = "1.0.4", features = ["os-poll", "net"] }
rand = "0.9.1"
rand_chacha = "0.9.0"
thiserror = "2.0.12"
tracing = "0.1.41"

[dev-dependencies]
clap = { version = "4.5.39", features = ["derive"] }
lazy_static = "1.5.0"
